--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,5 +13,7 @@ jobs:
           command: |
             protoc --js_out=import_style=commonjs,binary:/tmp/proto ~/proto/*.proto
 
+      # As an early step, we'll save artifacts instead
+      # of pushing them to npm
       - store_artifacts:
           path: /tmp/proto
