Another attempt at fixing config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - run: 
           name: Compile protobufs
           command: |
+            mkdir -p /tmp/proto
             protoc account_updated.proto --js_out=import_style=commonjs,binary:/tmp/proto --proto_path=$HOME/proto/
             protoc user_updated.proto --js_out=import_style=commonjs,binary:/tmp/proto --proto_path=$HOME/proto/
 
