--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,23 @@ jobs:
     docker:
       - image: grpc/go
 
-    working_directory: ~/proto
+    working_directory: $HOME/proto
     steps:
       - checkout
       - run: 
           name: Compile protobufs
           command: |
-            protoc --js_out=import_style=commonjs,binary:/tmp/proto ~/proto/*.proto
+            mkdir -p /tmp/proto
+            protoc account_updated.proto --js_out=import_style=commonjs,binary:/tmp/proto --proto_path=$HOME/proto/
+            protoc user_updated.proto --js_out=import_style=commonjs,binary:/tmp/proto --proto_path=$HOME/proto/
 
+      # As an early step, we'll save artifacts instead
+      # of pushing them to npm.
       - store_artifacts:
           path: /tmp/proto
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - compile
