--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,13 @@ jobs:
       - run: 
           name: Compile protobufs
           command: |
-            protoc account_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto --proto_path=$HOME/proto/
-            protoc user_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto --proto_path=$HOME/proto/
+            protoc account_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto/dist --proto_path=$HOME/proto/
+            protoc user_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto/dist --proto_path=$HOME/proto/
 
       # As an early step, we'll save artifacts instead
       # of pushing them to npm.
       - store_artifacts:
-          path: ~/proto
+          path: ~/proto/dist
 
       - persist_to_workspace:
           root: ~/proto
@@ -45,3 +45,4 @@ workflows:
   build:
     jobs:
       - compile
+      - publish
