--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: /proto
+  working_directory: ~/proto
 
 jobs:
   compile:
@@ -15,19 +15,19 @@ jobs:
       - run: 
           name: Compile protobufs
           command: |
-            mkdir /proto/dist
-            protoc account_updated.proto --js_out=import_style=commonjs,binary:/proto/dist --proto_path=/proto/
-            protoc user_updated.proto --js_out=import_style=commonjs,binary:/proto/dist --proto_path=/proto/
+            mkdir ~/proto/dist
+            protoc account_updated.proto --js_out=import_style=commonjs,binary:~/proto/dist --proto_path=$HOME/proto/
+            protoc user_updated.proto --js_out=import_style=commonjs,binary:~/proto/dist --proto_path=$HOME/proto/
 
       # As an early step, we'll save artifacts instead
       # of pushing them to npm.
       - store_artifacts:
-          path: /proto/dist
+          path: ~/proto/dist
 
       - persist_to_workspace:
-          root: /proto
+          root: /root/proto
           paths:
-            - ./*
+            - .
 
   publish:
     <<: *defaults
@@ -36,7 +36,7 @@ jobs:
 
     steps:
       - attach_workspace:
-          at: /proto
+          at: /root/proto
       - run:
           name: Publish to NPM
           command: npm publish
