--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,13 @@ jobs:
           name: Compile protobufs
           command: |
             mkdir -p $HOME/proto/dist
-            protoc account_updated.proto --js_out=import_style=commonjs,binary:~/proto/dist --proto_path=$HOME/proto/
-            protoc user_updated.proto --js_out=import_style=commonjs,binary:~/proto/dist --proto_path=$HOME/proto/
+            protoc account_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto/dist --proto_path=$HOME/proto/
+            protoc user_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto/dist --proto_path=$HOME/proto/
 
       # As an early step, we'll save artifacts instead
       # of pushing them to npm.
       - store_artifacts:
-          path: ~/proto/dist
+          path: $HOME/proto/dist
 
       - persist_to_workspace:
           root: /root/proto
