--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           path: /root/proto/dist
 
       - persist_to_workspace:
-          root: /root/proto
+          root: .
           paths:
             - .
 
@@ -36,7 +36,7 @@ jobs:
 
     steps:
       - attach_workspace:
-          at: /root/proto
+          at: .
       - run:
           name: Publish to NPM
           command: npm publish
