--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: /root/proto
+  working_directory: ~/proto
 
 jobs:
   compile:
@@ -15,9 +15,9 @@ jobs:
       - run: 
           name: Compile protobufs
           command: |
-            mkdir -p /root/proto/dist
-            protoc account_updated.proto --js_out=import_style=commonjs,binary:/root/proto/dist --proto_path=/root/proto/
-            protoc user_updated.proto --js_out=import_style=commonjs,binary:/root/proto/dist --proto_path=/root/proto/
+            mkdir -p $HOME/proto/dist
+            protoc account_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto/dist --proto_path=$HOME/proto/
+            protoc user_updated.proto --js_out=import_style=commonjs,binary:$HOME/proto/dist --proto_path=$HOME/proto/
 
       # As an early step, we'll save artifacts instead
       # of pushing them to npm.
