Only publish tags starting with v

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,6 @@ workflows:
             - compile
           filters:
             tags:
-              only: /.*/
+              only: /^v.*/
             branches:
               ignore: /.*/
