--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           name: Compile protobufs
           command: |
             mkdir -p $HOME/proto/dist
-            protoc --js_out=import_style=commonjs,binary:dist *.proto
+            protoc --js_out=import_style=commonjs,binary:dist -I . protos/*.proto
 
       # As an early step, we'll save artifacts instead
       # of pushing them to npm.
