--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "docs": "jsdoc -c .jsdoc.js",
     "docs:watch": "nodemon --exec 'npx jsdoc -c .jsdoc.js' --watch ./src ./tutorials"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Roadmunk/events.git"
