--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -13,7 +13,7 @@ jobs:
          - name: "Setup Node.js"
            uses: actions/setup-node@v1
            with:
-            node_version: 12.x
+            node-version: 12.x
          
          - name: "install"
            run: npm install
