--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -17,6 +17,8 @@ jobs:
          
          - name: "install"
            run: npm install
+           with:
+             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          
          - name: Install Protoc
            uses: arduino/setup-protoc@v1
