--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+          registry-url: https://npm.pkg.github.com/
+          scope: "@roadmunk"
       
       - name: "install"
         run: "npm install"
@@ -32,4 +34,4 @@ jobs:
       - name: "Publish"
         run: "npm publish"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
